<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context="za.ac.cut.assignment_ii.New_Contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_top"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_contact"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:hint="@string/enter_contact_name"
        android:gravity="center"
        android:inputType="textPersonName"
        android:layout_marginBottom="@dimen/margin"
        android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                app:srcCompat="@drawable/call" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:hint="@string/enter_tel_nr"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                app:srcCompat="@drawable/location" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:hint="@string/enter_location"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                app:srcCompat="@drawable/web" />

            <EditText
                android:id="@+id/wed_address"
                android:layout_width="match_parent"
                android:hint="@string/enter_web_address"
                android:inputType="textWebEmailAddress"
                android:layout_height="wrap_content" />
        </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_infor"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:onClick="saveInfo"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_top"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:onClick="goBack"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_top"/>

    </LinearLayout>

</LinearLayout>
