<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context="za.ac.cut.assignment_ii.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_top">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_app"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@android:color/black"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        app:srcCompat="@drawable/iconmy" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_contacts"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:onClick="New_Contact"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_top"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_contacts"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:onClick="Edit_Contact"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_top"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_info"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:onClick="Contract_info"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_marginRight="@dimen/margin_top"/>

    </LinearLayout>

</LinearLayout>
